# SVG

./: LICENSE  README.md
KSvgEditor/: CMakeLists.txt  README.md
KSvgEditor/debug/: CMakeCache.txt
KSvgEditor/res/: Resource.qrc
KSvgEditor/src/: main.cpp
KSvgEditor/src/ui/: kmainwindow.cpp  kmainwindow.h  kmainwindow.ui
KSvgEditor/src/ui/KCanvas/: kcanvascontroller.cpp  kcanvascontroller.h  kcanvaswidget.cpp  kcanvaswidget.h  kshapefactory.cpp  kshapefactory.h
KSvgEditor/src/ui/KParameterSetting/: kparametersettingwidget.cpp  kparametersettingwidget.h
KSvgEditor/src/ui/KRender/: kirender.cpp  kirender.h
KSvgEditor/src/ui/KRender/KRenderShapes/: kirendershape.cpp  kirendershape.h  krenderellipseshape.cpp  krenderellipseshape.h  krenderfreehandshape.cpp  krenderfreehandshape.h  krenderhexagonshape.cpp  krenderhexagonshape.h  krenderlineshape.cpp  krenderlineshape.h  krenderpentagonshape.cpp  krenderpentagonshape.h  krenderrectshape.cpp  krenderrectshape.h  krenderstarshape.cpp  krenderstarshape.h  krendertextshape.cpp  krendertextshape.h
KSvgEditor/src/ui/KRender/KShapes/: kishape.cpp  kishape.h
KSvgEditor/src/ui/KToolbar/: ktoolbarwidget.cpp  ktoolbarwidget.h
